# ai-league-truth-detector

./: .env.example  .gitignore  ARCHITECTURE.md  EXTENSION_BUILD_COMPLETE.md  README.md  pyproject.toml  requirements.txt
extension/: CHECKLIST.md  DEBUGGING.md  EXTENSION_SUMMARY.md  GETTING_STARTED.md  INSTALLATION.md  QUICKSTART.md  README.md  UI_ENHANCEMENTS.md  UI_UPDATE.md  background.js  content.js  generate_icons.py  manifest.json  popup.css  popup.html  popup.js  test-page.html
extension/icons/: .gitkeep
scripts/: ingest.py
src/: __init__.py  config.py  logger.py  main.py
src/agents/: __init__.py  rag_agent.py  state.py
src/api/: app.py  routes.py
src/rag/: __init__.py  embeddings.py  ingestion.py  re_ranker.py  retriever.py  vector_store.py
src/tools/: __init__.py  retrieval.py  search.py
tests/: test_api.py  test_config.py  test_ingestion.py
